--- a/style/index.css
+++ b/style/index.css
@@ -27,3 +27,17 @@
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
 }
+
+a:link {
+    text-decoration: none;
+    color: rgb(255, 217, 0);
+}
+a:visited {
+    color: rgb(255, 153, 0);
+}
+a:hover {
+    color: hotpink;
+}
+a:active {
+    color: hotpink;
+}
