--- a/bingguesser/src/game.css
+++ b/bingguesser/src/game.css
@@ -1,69 +1,9 @@
-/* Street View */
-
-#street-view {
-    margin-top: 0%;
-    width: 100%;
-    height: 100%;
+body {
+    background-color: rgb(32, 32, 32);
 }
 
-.streetview-class {
-    display: flexbox;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 1px solid rgb(56, 56, 56);
-    background-color: rgb(0, 0, 0);
-}
-
-/* Map */
-
-#map {
-    z-index: 1;
-    opacity: 0.95;
-    background-color: rgba(0, 0, 0, 0);
-    width: 100%;
-    height: 100%;
-    cursor: crosshair;
-    border: 1px solid rgb(0, 0, 0);
-    top: -100%;
-}
-
-/* Buttons */
-
-#mtos {
-    font-size: xx-small;
-    position: absolute;
-    top: 98%;
-    left: 0.5%;
-    display: block;
-}
-
-.menu-div {
-    margin-top: 65vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: absolute;
-    column-gap: 1vw;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#toggle-map, #guess-button, #new-round-button, #restart-button {
-    font-family: Arial, Helvetica, sans-serif;
-    display: inline-block;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: rgb(117, 25, 25);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
+* {
+    margin: 0;
 }
 
 button:hover {
@@ -76,43 +16,107 @@ button:active {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
+/* Street View */
+
+
+.streetview-class {
+    z-index: -1;
+    display: flexbox;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    background-color: rgb(0, 0, 0);
+}
+
+/* Map */
+
+#street-view {
+    z-index: 0;
+}
+
+#map {
+    z-index: 1;
+    opacity: 0.95;
+    top: -100%;
+    cursor: crosshair;
+}
+
+/* Buttons */
+
+#toggle-map, #guess-button, #new-round-button, #restart-button, #center-button {
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(117, 25, 25);
+    color: white;
+    font-size: medium;
+    cursor: pointer;
+}
+
 /* Player display */
 
 .player-display {
-    margin-left: 0%;
-    background-color: gainsboro;
-    font-size: large;
-    padding: 20px;
-    display: inline-block;
+    margin-top: 0.5vh;
+    margin-left: 1.5vw;
+    user-select: none;
+    color: rgb(255, 255, 255);
+    font-size: x-large;
+    display: inline-table;
 }
 
 .player-list {
+    color: rgb(255, 255, 255);
     display: flex;
-    margin: 3px;
+    margin-left: 5px;
     list-style: decimal;
-    padding: 5px;
+    padding: 2px;
     flex-direction: column;
 }
 
 .player-list li {
-    font-size: medium;
-    color: black;
-    padding: 5px;
-    background-color: #c77700;
-    border-radius: 20px;
-    margin-top: 1px;
+    font-size: large;
+    color: rgba(255, 255, 255);
+    padding: 2px;
 }
 
-body {
-    margin: 0;
-    background-color: rgb(88, 88, 88);
-}
+/* Misc */
 
-#round-counter {
-    display: flex;
+#round-timer-display {
+    align-items:flex-start;
+    flex-direction: column;
+    position: absolute;
+    top: 0.5vh;
+    right: 0.5vw;
+    user-select: none;
+    display: inline-flex;
     font-size: x-large;
-    color: red;
+    color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#mtos {
+    user-select: none;
+    font-size: xx-small;
+    position: absolute;
+    top: 98%;
+    left: 0.5%;
+    display: flex;
+}
+
+.menu-div { 
+    user-select: none;
+    top: 90vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: absolute;
+    column-gap: 1vw;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #endscreen {
