--- a/bingguesser/src/index.css
+++ b/bingguesser/src/index.css
@@ -28,7 +28,7 @@ p3 {
     align-items:baseline;
     justify-content: center;
     flex-direction: row;
-    gap: 5%;
+    gap: 5vw;
 }
 
 .text-class {
@@ -40,7 +40,7 @@ p3 {
 }
 
 .host-class, .join-class {
-    width: 20%;
+    width: 20vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,6 +62,8 @@ p3 {
 }
 
 .content {
+    margin-left: 10%;
+    width: 60%;
     padding: 0 50%;
     display: none;
     overflow: hidden;
@@ -71,6 +73,37 @@ p3 {
     border: 2px solid transparent;
     border-color: #fff transparent transparent transparent;
 }
+
+.slider {
+    -webkit-appearance: none;
+    width: 80%;
+    height: 15px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
 
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
