--- a/bingguesser/src/game.css
+++ b/bingguesser/src/game.css
@@ -38,14 +38,55 @@ button:active {
 
 #map {
     z-index: 1;
-    opacity: 0.95;
-    top: -100%;
+    width: 100%;
+    height: 100%;
+}
+
+#map-class {
+    z-index: 1;
+    opacity: 0.5;
     cursor: crosshair;
+    position: fixed;
+    top: 58vh;
+    left: 63vw;
+    width: 35vw;
+    height: 35vh;
+    border: 2px solid #ccc;
 }
 
 /* Buttons */
 
-#toggle-map, #guess-button, #new-round-button, #restart-button, #center-button {
+#guess-button {
+    z-index: 2;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.6vh 3vw;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(117, 25, 25);
+    color: white;
+    font-size: medium;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    transform: translate(-130%, -50%);
+}
+
+#center-button {
+    z-index: 2;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.6vh 3vw;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(117, 25, 25);
+    color: white;
+    font-size: medium;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    transform: translate(30%, -50%);
+}
+
+#toggle-map,  #new-round-button, #restart-button {
     font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     padding: 10px 20px;
